overflow bug fixed

--- a/src/components/Home/ThirdSection/index.module.css
+++ b/src/components/Home/ThirdSection/index.module.css
@@ -4,6 +4,7 @@
   background: #cea5ad;
   padding: 5%;
   position: relative;
+  overflow: hidden;
 }
 
 .mainHeading {
